--- a/main.html
+++ b/main.html
@@ -8,6 +8,32 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label for="name">Name</label>
+		<input type="Text" id="name" Required>
+		<label for="email">Email</label>
+		<input type="Email" id="email"  Required>
+		<label for="genderm">Male</label>
+		<input type="radio" id="genderm" name="gender" Required>
+		<label for="genderf">Female</label>
+		<input type="radio" id="genderf" name="gender" Required>
+		<label for="laptop">Laptop Brands</label>
+		<select id="laptop">
+			<option >Apples</option>
+			<option >Asus</option>
+			<option >HP</option>
+		</select>
+		<label for="age">Age</label>
+		<input type="Number" id="age" Required>
+		<label for="dob" >Date of Birth</label>
+		<input type="Date" id="dob" Required>
+		<lable for="password">Password</lable>
+		<input type="Password" id="password" Required>
+		<label for="portfolio">Portfolio URL</label>
+		<input type="URL" id="portfolio">
+		<button type="submit">Submit</button>
+	
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
