--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
 		<label for="dob" >Date of Birth</label>
 		<input type="Date" id="dob" Required>
 		<lable for="password">Password</lable>
-		<input type="Password" id="password" Required>
+		<input type="password" id="password" Required>
 		<label for="portfolio">Portfolio URL</label>
 		<input type="URL" id="portfolio">
 		<button type="submit">Submit</button>
