--- a/main.html
+++ b/main.html
@@ -27,7 +27,7 @@
 		<input type="Number" id="age" Required>
 		<label for="dob" >Date of Birth</label>
 		<input type="Date" id="dob" Required>
-		<lable for="password">Password</lable>
+		<label for="password">Password</lable>
 		<input type="password" id="password" Required>
 		<label for="portfolio">Portfolio URL</label>
 		<input type="URL" id="portfolio">
